bug#43632 01.diff TUP proxy: for UNDO execution keep track of which tables exist